--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "BOT_TOKEN": "Nzk0NjQyMTgzNTkxMjk3MDM1.X-9yNA.sRSke2XqotKKYSoh6Mv0SdmT_X0",
-    "announcer-role": "794941016317886464"
+    "BOT_TOKEN": "YOUR_BOT_TOKEN",
+    "announcer-role": "YOUR_ANNOUNCER_ROLE"
 }
